--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -6,7 +6,7 @@
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/Flame.png"/>
         <span id="welcomeHeader">WELCOME TO Nytro Networks</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming.</span>
+        <span id="welcomeDescription">Nytro Networks is the Number 1 modded Minecraft server network! We host the best CrundeeCraft, TrollCraft, Sky Factory 2.4, and Augmented Triad servers! Our servers are optimized to be at peak performance with very little lag to make your modding experience top of the line and enjoyable!</span>
         <br>
         <span id="welcomeDescCTA">You are just a few clicks away from Nytro.</span>
         <button id="welcomeButton">
